--- a/k8s-manifests/deployment.yaml
+++ b/k8s-manifests/deployment.yaml
@@ -1,21 +1,26 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
   name: nginx
-  labels:
-    app: nginx
 spec:
-  replicas: 1
+  containers:
+    - name: nginx
+      image: nginx:latest
+      ports:
+        - containerPort: 80  # Port inside the container
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
   selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
+    app: nginx  # This selects the Nginx pod by label
+  ports:
+    - protocol: TCP
+      port: 80         # Port exposed inside the cluster
+      targetPort: 80    # Port on the container
+      nodePort: 30001   # External port to expose via NodePort
+  type: NodePort
+
