--- a/k8s-manifests/deployment.yaml
+++ b/k8s-manifests/deployment.yaml
@@ -1,26 +1,21 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: nginx
+  labels:
+    app: nginx
 spec:
-  containers:
-    - name: nginx
-      image: nginx:latest
-      ports:
-        - containerPort: 80  # Port inside the container
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-service
-spec:
+  replicas: 1
   selector:
-    app: nginx  # This selects the Nginx pod by label
-  ports:
-    - protocol: TCP
-      port: 80         # Port exposed inside the cluster
-      targetPort: 80    # Port on the container
-      nodePort: 30001   # External port to expose via NodePort
-  type: NodePort
-
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:latest
+          ports:
+            - containerPort: 80
